--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,11 @@ a {
   cursor: pointer;
 }
 
+a:where(:hover) {
+  text-decoration: revert;
+  cursor: pointer;
+}
+
 header {
   width: 100%;
   height: 60px;
