--- a/css/main.css
+++ b/css/main.css
@@ -156,3 +156,43 @@ main .main-buttons button:where(:hover, :focus-visible) {
 
   color: black;
 }
+
+footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+
+  position: absolute;
+  bottom: 0;
+
+  border-top: 1px solid #dbdbdb;
+  width: 100%;
+  height: 50px;
+
+  font-size: 13px;
+
+  background: #f2f2f2;
+  color: #000;
+}
+
+footer ul {
+  display: flex;
+  
+  margin: 10px;
+  padding: 0;
+  
+  list-style: none;
+}
+
+footer .footer-left {
+  justify-self: left;
+}
+
+footer .footer-right {
+  justify-self: right;
+}
+
+footer ul li a {
+  margin: 10px;
+  color: #5f6368;
+}
